<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TeamInviteDialog"
    android:paddingHorizontal="30dp"
    android:paddingVertical="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:textAlignment="center"
            android:textSize="17sp"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_you_want_to_join_the_team" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp">

            <Button
                android:backgroundTint="@color/gray_400"
                android:id="@+id/declineBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/acceptBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>


    

</FrameLayout>