<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InsertFragment"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/title"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="text" />

            <ImageView
                android:id="@+id/image_icon"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_baseline_image_24"
                android:contentDescription="@string/todo" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scroll_1"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_1">

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:gravity="left|top"
                android:hint="@string/input_thread_description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:paddingVertical="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_1" />
        </ScrollView>

        <ImageView
            android:adjustViewBounds="true"
            android:paddingBottom="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/new_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="125dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scroll_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >
            <LinearLayout
                android:id="@+id/tagLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_fmd_good_24"
                    />
                <EditText
                    android:id="@+id/tag"
                    android:layout_marginLeft="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:hint="@string/tag_find"
                    android:textSize="12sp"
                    android:background="@android:color/transparent"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/createBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_200"
                android:text="@string/create_thread"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>